# huhy_site_my

./: Dockerfile  README.md  SCRIPTS.md  docker-compose.yml  manage.py  pyproject.toml  scripts.txt  web.html  ТЗ.txt
alphahuhysite/: asgi.py  settings.py  urls.py  wsgi.py
base/: admin.py  models.py  urls.py
base/migrations/: 0001_initial.py
base/static/css/: styles.css
base/templates/: home.html
