[tool.poetry]
name = "alphahuhysite"
version = "0.1.0"
description = ""
authors = ["Amolit <MikeKukPer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
